Modifications to Josh Scheidler's Changed Files + Working Parser
Changed namespace on Josh Scheidler's contributed files to match
namespace on main part of program.  The Parser function is now working.
Next: put label, opcode, and memlocation into new Assembly object(s).

--- a/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler.csproj
+++ b/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assembly.cs" />
+    <Compile Include="Convert.cs" />
+    <Compile Include="Data.cs" />
+    <Compile Include="Execute.cs" />
+    <Compile Include="Instruction.cs" />
+    <Compile Include="Label.cs" />
     <Compile Include="SimCom Simulator.cs">
       <SubType>Form</SubType>
     </Compile>
