--- a/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler.csproj
+++ b/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler/P01_Caldwell_Scheidler.csproj
@@ -88,6 +88,7 @@
     <None Include="Resources\Desktop Computer.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\Computer Monitor.png" />
     <Content Include="Resources\Desktop Computer FavIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
